--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
           </div>
           <div id="menu_mobile">
             <div id="botao-hamburgue">
-              <!--
-              <button id="hamburge-btn">Botao</button>
-              -->
               <i id="hamburge-btn" class="fa fa-bars"></i>
             </div>
           </div>
@@ -160,11 +157,10 @@
             <div id="formulario-contato"> 
                 <form action="" method="post">
                   <div class="form-group">
-                      <label class="form-group">Nome</label>  
                       <input class="form-control" type="text" placeholder="Nome">
                   </div>
                   <div class="form-group">
-                        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username">
+                        <input type="email" class="form-control" id="inlineFormInputGroup" placeholder="E-Mail">
                   </div>                  
                   <div class="form-group">
                       <label for="exampleFormControlTextarea1">Mensagem</label>
