--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <!--  
     <link rel="stylesheet" href="assets/Font-Awesome-4.7.0/css/font-awesome.min.css">
   -->
-  <!--AOS-->
+  <!--AOS--
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+-->
   </head>
 
 <body>
